<resources>
    <string name="app_name">demo</string>
    <string name="country_code">en</string>
    <string name="voiceTalkback">您现在可以进行语音对讲</string>
    <string name="btnHD">高清</string>
	<string name="standardDefinition">标清</string>
	<string name="videoPlaying">视频播放</string>
	<string name="takeACabdidPhotograph">抓拍</string>
	<string name="inversion">倒置</string>
	<string name="talkback">对讲</string>
	<string name="monitor">监听</string>
	<string name="definition">清晰度</string>
	<string name="back">退出</string>
	   <string name="alert_title">提示！</string>
    <string name="alert_btn_OK">确定</string>
    <string name="alert_btn_Cancel">取消</string>
    <string name="alert_add_btn_OK">确定添加</string>
    <string name="alert_add_btn_Cancel">取消</string>
    <string name="alert_btn_YES">是</string>
    <string name="alert_btn_NO">否</string>
    <string name="alert_title_login_failed">登录失败!</string>
     <string name="notice_Result_NOPRI">权限不足.</string>
    <string name="notice_Result_UserNoExist">用户不存在.</string>
    <string name="notice_Result_PWDError">用户名或密码错误.</string>
    <string name="notice_Result_BadResult">数据损坏.</string>
    <string name="notice_Result_NetError">网络连接失败!</string>
    <string name="notice_Result_Server_Offline">前端设备不在线.</string>
    <string name="notice_Result_VerifyFailed">验证错误.</string>
    <string name="notice_Result_Old_Version">前端设备版本不支持.</string>
     <string name="login_Result_ConnectTimeout">连接超时.</string>
    <string name="notice_Result_ConnectServerFailed">连接设备失败.</string>
     <string name="alert_stop_play">是否停止接收视频?</string>
      <string name="Notification_Playing_Chn">正在收看： </string>
      <string name="deviceTurn">该设备不支持转动</string>
    <string name="alert_clear_list">是否清空设备列表？</string>
    <string name="alert_delete_server">是否删除设备？</string>
    <string name="alert_set_config_ok">更改配置成功.</string>
    <string name="alert_open_setting_view">温馨提示：设备wifi模式或配置已经改变；是否需要打开网络设置，修改您的Wifi连接？</string>
    <string name="alert_open_setting_view_ap">温馨提示：前端: 备处于AP热点模式，如果需要连接它，请点击“确定”修改你的Wifi连接配置</string>
    <string name="alert_get_config_fail">获取配置失败:</string>
    <string name="alert_set_config_fail">设置配置失败:</string>
    <string name="alert_username_is_invalide">用户名不能为空</string>
    <string name="alert_password_err">原密码输入有误.</string>
    <string name="alert_password_confirm_err">新密码两次输入不相同.</string>
    <string name="alert_station_password_is_null">Station 的密码不能为空.</string>
    <string name="alert_ap_name_is_null">AP 名字不能为空.</string>
    <string name="alert_station_name_is_null">Station 名字不能为空.</string>
    <string name="result_code_conn_fail">设备连接失败</string>
    <string name="login_Result_MR_Server_Busy">服务器正忙，请稍后再试.</string>
    <string name="login_Result_MR_Server_Disconnet">与前端设备连接已经断开.</string>
    <string name="notice_Result_PWD_ERR_AP">AP 密码要求为空或者大于等于8个字符.</string>
    <string name="notice_Result_PWD_ERR_Station">Station 密码要求为空或者大于等于8个字符.</string>
    <string name="notice_Result_PWD_ERR">密码要求为空或者大于等于8个字符.</string>
    <string name="toast_last_page">已经是最后一页</string>
    <string name="toast_first_page">已经是第一页</string>
    <string name="toast_add_in_list">已添加到列表</string>
    <string name="toast_remove_from_list">已从列表删除</string>
    <string name="toast_network_unreachable">网络连接不可用，请检查网络设置</string>
    <string name="toast_list_is_null">设备列表为空, 请添加设备</string>
    <string name="connecting">正在连接&#8230;</string>
    <string name="loading">正在加载</string>
    <string name="name">名    称:</string>
    <string name="server">设备地址:</string>
	<string name="port">端       口:</string>
    <string name="username">用户名: </string>
	<string name="password">密     码: </string>
	<string name="password_old">原密码: </string>
	<string name="password_new">新密码: </string>
	<string name="password_confirm">确认密码: </string>
	<string name="autologin">自动登录</string>
	<string name="record_info">记住登录信息</string>
	<string name="norecord">没有输入记录</string>
	<string name="nameHint">在这里输入一个名称</string>
	<string name="serverHint">请输入设备地址</string>
	<string name="portHint">请输入接收端口</string>
	<string name="usernameHint">请输入用户名</string>
	<string name="passwordHint">请输入密码</string>
	<string name="btn_login">登录</string>
	<string name="btn_serverList">设备列表</string>
	<string name="btn_back">返回</string>
	<string name="btn_refresh">刷新</string>
	<string name="btn_add">添加</string>
	<string name="btn_delete">删除</string>
	<string name="btn_edit">编辑</string>
	<string name="btn_finish">完成</string>
	<string name="btn_search">搜索</string>
	<string name="btn_research">搜索设备</string>
	<string name="btn_addtolist">添加到列表</string>
	<string name="btn_IsInlist">已添加到列表</string>
	<string name="btn_save">保存</string>
	<string name="btn_save_setting">设置</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>
    <string name="btn_add_qr">二维码添加</string>
    <string name="btn_stop_all">停止</string>
    <string name="btn_stop_play">停止</string>
    <string name="btn_start_play">收看</string>
    <string name="btn_one_key_sync">设为手机时间</string>
    <string name="btn_save_time">设置时间</string>
    <string name="btn_get_from_list">从本地WIFI中选取</string>
    <string name="title_add_device">添加设备</string>
    <string name="title_Edit_device">修改设备</string>
	<string name="searching">正在搜索设备&#8230;</string>
	<string name="searchcancel">搜索被取消</string>
	<string name="has">搜索到</string>
	<string name="device_found">台设备</string>
	<string name="logining">正在登录&#8230;</string>
	<string name="Notification_To_Login">设备未登录&#8230;</string>
    <string name="str_Notic_Close_APP">是否要退出程序? </string>
    <string name="str_serverList">设备列表 </string>
    <string name="notice_RecvDataFailed">连接失败.</string>
    <string name="notice_RecvStop">与前端设备连接断开.</string>
    <string name="str_Select_To_Play">请选择收看通道</string>
	<string name="str_PlayingChn">正在收看通道：</string>
    <string name="wifi_mode">WIFI 模式: </string>
	<string name="wifi_mode_ap">AP</string>
	<string name="wifi_mode_station">Station</string>
	<string name="wifi_mode_ap_setting">AP模式 (热点模式，无需外接路由)</string>
	<string name="wifi_current_mode">当前模式: </string>
	<string name="wifi_mode_station_setting">Station模式 (路由器连接模式)</string>
	<string name="server_config">设备信息设置</string>
	<string name="local_config">本地设置:</string>
	<string name="remote_config">远程设置:</string>
	<string name="config_base">设备基本信息</string>
	<string name="config_network">网络设置</string>
	<string name="config_record">录像设置</string>
	<string name="config_time">时间设置</string>
	<string name="config_user">用户管理</string>
	<string name="config_alarm_prompt">报警提示</string>
    <string name="station_current_wifi">设置的wifi: </string>
    <string name="record_auto_record_title">自动录像: </string>
    <string name="record_record_open">开启</string>
    <string name="record_record_close">关闭</string>
    <string name="record_alarm_record_title">报警录像: </string>
    <string name="record_record_full_op">录像满盘操作: </string>
    <string name="record_record_full_op_recorver">覆盖旧文件</string>
    <string name="record_record_full_op_stop">停止录像</string>
    <string name="date_current">日期:</string>
    <string name="time_current">时间:</string>
    <string name="device_time_current">设备时间:</string>
    <string name="set_time">时间设置:</string>
    <string name="set_date">日期设置:</string>
    <string name="getting_network_config">正在获取网络配置&#8230;</string>
    <string name="getting_network_config_fail">获取网络配置失败.</string>
    <string name="getting_record_config">正在获取录像配置&#8230;</string>
    <string name="getting_record_config_fail">取录像配置失败.</string>
    <string name="getting_datetime_config">正在获取系统时间…</string>
    <string name="getting_datetime_config_fail">获取系统时间失败.</string>
     <string name="getting_alarmprompts_config">正在获取报警和提示设置信息#8230;</string>
    <string name="getting_alarmprompts_config_fail">获取报警和提示设置失败.</string>
    <string name="getting_version_info">正在获取设备版本信息…</string>
    <string name="getting_version_info_fail">获取设备版本失败.</string>
    <string name="user_info">用户信息</string>
    <string name="getting_user_config">正在获取用户配置…</string>
    <string name="getting_user_config_fail">获取用户配置失败.</string>
    <string name="local_wifi_device_list">本地wifi设备列表，请选择.</string>
    <string name="modify_password">修改密码</string>
    <string name="wifi_no_select">请选择Wifi设备.</string>
    <string name="disk_size">磁盘空间大小: </string>
    <string name="disk_use">剩余磁盘空间: </string>
    <string name="no_dev_found">没有发现新设备.</string>
    <string name="search_finish">列表已刷新.</string>
    <string name="add_device">新添加设备：</string>
    <string name="strIDNumber">设备 ID:</string>
    <string name="strAdvance">高级设置</string>
    <string name="strDeviceVerInfo">设备升级</string>
    <string name="strAppVersion">系统软件版本：</string>
    <string name="strKernalVersion">系统内核版本：</string>
    <string name="strHardwareVersion">系统硬件版本：</string>
    <string name="strVersionDate">创建日期:</string>
    <string name="btnSelectALL">全选</string>
    <string name="btnUnSelectALL">反选</string>
    <string name="btnDelect">删除</string>
     <string name="tabDeviceList">设备列表</string>
    <string name="tabHome">首页</string>
	<string name="tabScreenShot">图片</string>
	<string name="tabPlayback">回放</string>
	<string name="tabHelp">帮助</string>
	<string name="lblSelectDevice">请选择设备</string>
	<string name="lblDevice">选中设备: </string>
	<string name="lblDate">选择日期: </string>
	<string name="lblStartTime">开始时间: </string>
	<string name="lblEndTime">结束时间: </string>
	<string name="lblRecType">录像类型: </string>
	<string name="strAll">全部</string>
	<string name="strAuto">自动录像</string>
	<string name="strAlarm">报警录像</string>
	<string name="noticNoDeviceSelect">设备没有选中</string>
	<string name="noticStartlargeThanEnd">开始时间不能大于结束时间</string>
	<string name="noticEndLessThanStart">结束时间不能小于开始时间</string>
	<string name="noticRecConnectFail">搜索失败：连接设备失败.</string>
	<string name="noticRecOKNOFiles">搜索完毕，没有发现你要查找的录像文件</string>
	<string name="strStartTime">开始时间: </string>
	<string name="strTimeLen">时长: </string>
	<string name="strFileSize">大小：</string>
	<string name="btnHideList">隐藏列表</string>
	<string name="btnVisibleList">显示列表</string>
	<string name="btnSearchRecFile">搜索文件</string>
	<string name="strRecFileList">录像文件列表</string>
	<string name="btnVersionUpdate">软件版本更新</string>
	<string name="btnFunctionManu">软件功能介绍</string>
	<string name="strHour">小时</string>
	<string name="strMin">分钟</string>
	<string name="strSec">秒</string>
	<string name="lblRecordAudioTitle">录像音频:</string>
	<string name="lblRecordFrameSize">录像分辨率:</string>
	<string name="lbl1080P">1080P</string>
	<string name="lbl720P">720P</string>
	<string name="lblD1">D1</string>
	<string name="lblVGA">VGA</string>
	<string name="lblCIF">CIF</string>
	<string name="lblQVGA">QVGA</string>
	<string name="lblNOSDCard">设备没有插入SD 卡</string>
<string name="lbSDCardWritteErr">SDCard读写异常</string>
<string name="lblGettingAlarmMsg">正在获取报警信息&#8230;</string>
<string name="lblSmokeAlarm">烟雾报警</string>
<string name="lblMotionAlarm">移动报警</string>
<string name="lblPIRAlarm">人体感应报警</string>
<string name="lblMoreAlarmMsg">下拉加载更多报警信息.</string>
<string name="lblLoadingAlarmMsg">正在加载更多&#8230;</string>
<string name="pull_to_load_more">下拉加载更多报警信息.</string>
<string name="pull_to_refresh_release_load_more">放开载更多报警信息&#8230;</string>
<string name="pull_to_refresh_loading_more">正在加载更多&#8230;</string>
<string name="lblInputName">在这里输入一个名称</string>
<string name="lblAudioSwitch">语音提示开关:</string>
<string name="lblAudioMainSwitch">语音总开关:</string>
<string name="lblAlarmAudio">报警音提示:</string>
<string name="lblLanguange">提示音语言:</string>
<string name="lblIOSwitch">外部报警IO:</string>
<string name="lblIOMode">外部报警输出模式:</string>
<string name="lblIOModeExternal">外部报警系统</string>
<string name="lblIOModeInternal">内部报警系统</string>
<string name="lblIOModeManualOff">手动控制关闭输出</string>
<string name="lblIOModeManualOn">手动控制开启输入</string>
<string name="lblLanguageCN">普通话</string>
<string name="lblLanguageEN">英语</string>
<string name="deviceChoose">设备选择:</string>
<string name="AllPlayBack">全部录像</string>
<string name="VideoPlayBack">录像回放</string>
</resources>