<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
	
 	<LinearLayout android:id="@+id/layoutSearchParam" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:background="#DDDDDD">
		
		<LinearLayout android:layout_width="fill_parent" android:layout_height="45dip" android:orientation="horizontal" android:background="@drawable/background_title" android:weightSum="1" >
			<ImageView android:id="@+id/ivNvplayerBack" android:layout_width="70dip" android:layout_height="40dip" android:src="@drawable/back_btn" android:layout_gravity="center"  android:contentDescription="@null" />
		    <TextView android:layout_width="0dip" android:layout_weight="1" android:layout_height="fill_parent" android:text="@string/VideoPlayBack" android:gravity="center" android:textColor="@color/font_color_white" android:textSize="16sp" />
		    <TextView android:layout_width="70dip" android:layout_height="fill_parent" />
        </LinearLayout>
        
		
		<LinearLayout android:id="@+id/layoutDevice" android:layout_width="fill_parent" android:layout_height="60dip" android:orientation="horizontal" 
		    android:background="@drawable/device_config_device_choose_bg" android:gravity="center" android:baselineAligned="false">
        
         <LinearLayout android:id="@+id/llPlayBackTitle" android:layout_marginLeft="5dip" android:layout_marginRight="5dip" android:layout_width="fill_parent" android:layout_height="50dip" android:layout_weight="1" 
             android:background="@null" android:orientation="horizontal" android:gravity="center">
        
          <TextView android:layout_width="0dip" android:layout_height="50dip" android:layout_weight="1" android:text="@string/deviceChoose" 
            android:textColor="@color/font_color_black" android:textSize="16sp" android:gravity="center" />
             
        <TextView android:id="@+id/textViewDevice" android:layout_width="0dip" android:layout_height="50dip" android:layout_weight="1"  
            android:textColor="@color/font_color_black" android:textSize="16sp" android:gravity="center" />
         <ImageView android:id="@+id/ivDeviceConfigListView" android:layout_width="0dip" android:layout_weight="1" android:layout_height="40dip" android:src="@drawable/device_config_function_btn"
               android:contentDescription="@null"/>
        </LinearLayout>
    </LinearLayout>
		
		<LinearLayout android:visibility="gone" android:id="@+id/llPlayer_back_listView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:background="@null">
		     	<ListView android:id="@+id/lvPlayer_back" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="center" />
		     
		</LinearLayout>
		
		<ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
		<LinearLayout android:visibility="visible" android:id="@+id/llAll" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:background="@color/font_color_white">
        <LinearLayout android:id="@+id/llSearchType" android:background="@drawable/player_back_bg" android:layout_width="match_parent" android:layout_height="60dip" android:orientation="horizontal" android:weightSum="100">

   		     <TextView
			         android:layout_width="0dip"
			         android:layout_weight="35"
			         android:layout_height="30dip"
			         android:text="@string/lblRecType"
			         android:textColor="@color/font_color_black"
			         android:textSize="16sp"
			         android:gravity="center"/>
   		      <TextView android:id="@+id/tvPlayer_back_type"  android:textColor="@color/font_color_black" android:textSize="14sp" android:layout_width="0dip" android:layout_weight="35" android:layout_height="match_parent" android:text="11" android:gravity="right|center_vertical"/>
            	<ImageView android:id="@+id/ivPlayer_back_type" android:layout_width="0dip" android:layout_height="35dip" android:layout_weight="30" 
            	    android:src="@drawable/play_back_video_back_2" android:layout_gravity="center"  android:contentDescription="@null"  />		          		      
   		</LinearLayout>
   		
   		<LinearLayout android:visibility="gone" android:id="@+id/llPlayerBackType" android:layout_width="fill_parent" android:layout_height="60dip" android:orientation="vertical" android:background="@null" >
   		    <LinearLayout android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/background_gray" />
   		    <RadioGroup android:id="@+id/rGroupRecType" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="59dip" android:gravity="center" > 
				         <RadioButton
				         android:id="@+id/rBtnTypeAll"
				         android:layout_width="0dip"
				         android:layout_weight="1"
				         android:layout_height="wrap_content"
				         android:text="@string/AllPlayBack" 
				         android:gravity="center"
				         android:layout_marginLeft="10dip"
				         android:textColor="@color/font_color_black"
				         android:textSize="14sp"
					     android:button="@drawable/radio_button_style"
				         android:checked="true"/>
				
				          <RadioButton
				         android:id="@+id/rBtnTypeAuto"
				          android:layout_width="0dip"
				         android:layout_weight="1"
				         android:layout_height="wrap_content"
				         android:text="@string/record_auto_record_title"
				         android:textSize="14sp" 
				         android:gravity="center"
				         android:textColor="@color/font_color_black"
					     android:button="@drawable/radio_button_style"
				         android:checked="true"/>
				          
				        <RadioButton
				         android:id="@+id/rBtnTypeAlarm"
				          android:layout_width="0dip"
				         android:layout_weight="1"
				         android:layout_height="wrap_content"
				         android:text="@string/record_alarm_record_title" 
				         android:gravity="center"
				         android:textColor="@color/font_color_black"
				         android:textSize="14sp"
					     android:button="@drawable/radio_button_style"
				         android:checked="false"/>
				     </RadioGroup>
   		</LinearLayout>
 
   		<LinearLayout  android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/background_gray" />
   		<LinearLayout  android:id="@+id/layoutSearchDate" android:background="@drawable/player_back_bg" android:layout_width="match_parent" android:layout_height="60dip" android:orientation="horizontal" android:weightSum="100">
			
   		     <TextView android:layout_width="0dip" android:layout_weight="35" android:textColor="@color/font_color_black" android:textSize="16sp" android:layout_height="match_parent" android:text="@string/lblDate" android:gravity="center"/>
   		     <TextView android:id="@+id/textViewDate"  android:textColor="@color/font_color_black" android:textSize="14sp" android:layout_width="0dip" android:layout_weight="35" android:layout_height="match_parent" android:text="2014-01-01" android:gravity="right|center_vertical"/>
			 <ImageView  android:layout_width="0dip" android:layout_height="35dip" android:layout_weight="30" android:src="@drawable/device_config_function_btn"
			      android:contentDescription="@null" android:layout_gravity="center"  />
   		</LinearLayout>
   		<LinearLayout android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/background_gray" />
   	
 			<LinearLayout android:id="@+id/layoutSearchStartTime" android:layout_width="match_parent" android:layout_height="60dip" android:orientation="horizontal" >
        		<TextView android:layout_width="0dip" android:layout_weight="35"  android:textColor="@color/font_color_black" android:textSize="16sp" android:layout_height="match_parent" android:text="@string/lblStartTime" android:gravity="center"/>
   		     	<TextView android:id="@+id/textViewStartTime"  android:textColor="@color/font_color_black" android:textSize="14sp" android:layout_width="0dip" android:layout_weight="35" android:layout_height="match_parent" android:text="00:00" android:gravity="right|center_vertical"/>
   		     	<ImageView  android:layout_width="0dip" android:layout_height="35dip" android:layout_weight="30" android:src="@drawable/device_config_function_btn" android:layout_gravity="center"  android:contentDescription="@null"  />
            </LinearLayout>
            <LinearLayout  android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/background_gray" />
            <LinearLayout android:id="@+id/layoutSearchEndTime" android:layout_width="match_parent" android:layout_height="60dip" android:orientation="horizontal">
        		<TextView android:layout_width="0dip" android:layout_weight="35"  android:textColor="@color/font_color_black" android:textSize="16sp" android:layout_height="match_parent" android:text="@string/lblEndTime" android:gravity="center"/>
   		     	<TextView android:id="@+id/textViewEndTime"  android:textColor="@color/font_color_black" android:textSize="14sp" android:layout_width="0dip" android:layout_weight="35" android:layout_height="match_parent" android:text="23:59" android:gravity="right|center_vertical"/>
   		     	<ImageView  android:layout_width="0dip" android:layout_height="35dip" android:layout_weight="30" android:src="@drawable/device_config_function_btn" android:layout_gravity="center"  android:contentDescription="@null" />
            </LinearLayout>
            
		
   		 <LinearLayout android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/background_gray" android:layout_gravity="top" />
   		 <LinearLayout  android:layout_width="match_parent" android:layout_height="100dip" android:orientation="horizontal" android:gravity="bottom|center"  android:background="#DDDDDD" android:paddingBottom="10dip">

   		     <Button
   		         android:id="@+id/btnStartSearch"
   		         android:layout_width="120dip"
   		         android:layout_height="50dip"
   		           android:textColor="@color/font_color_white"
   		         android:textSize="16sp"
   		         android:background="@drawable/delete_save_btn"
   		         android:text="@string/btnSearchRecFile" />

   		     <Button
   		         android:id="@+id/btnListVisible"
   		         android:layout_width="120dip"
   		         android:layout_height="50dip"
   		         android:layout_marginLeft="50dip"
   		         android:textColor="@color/font_color_white"
   		         android:textSize="16sp"
   		         android:background="@drawable/delete_save_btn"
   		         android:text="@string/btnVisibleList" />

   		 </LinearLayout>
	</LinearLayout>
	</ScrollView>
    </LinearLayout>
    <LinearLayout android:visibility="gone" android:weightSum="1" android:id="@+id/layoutRecFileList" android:orientation="vertical"  android:layout_width="fill_parent" android:layout_height="match_parent" android:background="@null" >
 	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:orientation="horizontal"
        android:gravity="center" 
        android:visibility="visible"
        android:background="#0076d1"
        >
		
		<ImageView android:id="@+id/btnDeviceSelectBack" 
		     android:contentDescription="@null" 
            android:layout_width="70dip"
            android:layout_height="40dip"
            android:src="@drawable/back_btn"
            android:gravity="center"
            android:text="@null"
            android:textColor="@color/text_color_style"
            android:textSize="16sp" />
		    
		     <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:text="@string/strRecFileList"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_weight="1" />
		    
		     
		 <ImageView
		 	 android:contentDescription="@null"          
            android:layout_width="70dip"
            android:layout_height="35dip"
            android:src="@drawable/back_btn"
            android:gravity="center"
            android:text="@null"
            android:textColor="@color/text_color_style"
            android:visibility="invisible" />
		     
    </LinearLayout>
    <RelativeLayout   android:layout_width="fill_parent" android:layout_height="match_parent"  android:layout_weight="1" android:background="@null">
 	
  
    <ListView
        android:id="@+id/recfile_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <ProgressBar android:id="@+id/searchingProgressBar" style="?android:attr/progressBarStyleLarge" android:layout_width="80dip"  android:layout_height="80dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true"  android:visibility="gone"/>
    
    
	
   </RelativeLayout>
 </LinearLayout> 
</LinearLayout>